package Factory_pattern;

public enum laptopType {
    WINDOW, APPLE
}

